terraform/alb.tf
resource "aws_security_group" "alb" {
  name = "${var.app_name}-alb" vpc_id = aws_vpc.this.id
  ingress { from_port = 80 to_port = 80 protocol = "tcp" cidr_blocks = ["0.0.0.0/0"] }
  egress { from_port = 8080 to_port = 8080 protocol = "tcp" security_groups = [aws_security_group.tasks.id] }
}
resource "aws_security_group" "tasks" {
  name = "${var.app_name}-tasks" vpc_id = aws_vpc.this.id
  ingress { from_port = 8080 to_port = 8080 protocol = "tcp" security_groups = [aws_security_group.alb.id] }
  egress { from_port = 443 to_port = 443 protocol = "tcp" cidr_blocks = ["0.0.0.0/0"] }
}
resource "aws_lb" "this" { name = "${var.app_name}-alb" internal = false load_balancer_type = "application" security_groups = [aws_security_group.alb.id] subnets = aws_subnet.public[*].id drop_invalid_header_fields = true }
resource "aws_lb_target_group" "app" { name = "${var.app_name}-tg" port = 8080 protocol = "HTTP" vpc_id = aws_vpc.this.id target_type = "ip" health_check { path = "/actuator/health" matcher = "200" } }
resource "aws_lb_listener" "http" { load_balancer_arn = aws_lb.this.arn port = 80 protocol = "HTTP" default_action { type = "forward" target_group_arn = aws_lb_target_group.app.arn } }
